# melon

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/melon/: __init__.py  cli.py  melon.py  utils.py
