[metadata]
name = melon
version = attr: melon.__version__
classifiers = 
	Programming Language :: Python :: 3

license = MIT
description = MELON: Metagenomic Taxonomy Profiling and Genome Copies Estimation using Nanopore Long Reads
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    taxonomy
    taxonomy profiling

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
packages = find:

[options.entry_points]
    console_scripts = 
        melon = melon.cli:cli

[options.packages.find]
    where = src