[metadata]
name = melon
version = attr: melon.__version__
classifiers = 
	Programming Language :: Python :: 3

license = MIT
description = Melon: long-read targeting taxonomic profiling and genome copies estimation using phylogenetic marker genes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    taxonomy
    taxonomic profiling

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
packages = find:

[options.entry_points]
    console_scripts = 
        melon = melon.cli:cli

[options.packages.find]
    where = src